--- a/.env
+++ b/.env
@@ -27,3 +27,9 @@ APP_SECRET=45022b4ac7373561b392f02cdc846d27
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/cours_en_ligne_db?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=707a658723dca05ca532e6d41f9bf367
+###< lexik/jwt-authentication-bundle ###
