Login and register

--- a/.env
+++ b/.env
@@ -33,3 +33,6 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=707a658723dca05ca532e6d41f9bf367
 ###< lexik/jwt-authentication-bundle ###
+
+
+CORS_ALLOW_ORIGIN=^http?://.*?$
